# edenred-telegram

./: .dockerignore  .env.example  .gitignore  .secrets.toml.example  Dockerfile  README.md  cloudbuild.yaml  config.py  logger.py  main.py  pyproject.toml  settings.toml
edenred_telegram/: app.py  config.py  handlers.py
