[project]
name = "edenred-telegram"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot[webhooks]>=22.8",
]

[project.scripts]
edenred-telegram = "edenred_telegram.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true
